# salesforce-timecard

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  test.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
salesforce_timecard/: __init__.py  cli.py  core.py  utils.py  utlis.py
test/: sample.yaml
tests/: conftest.py  test_timedelete.py  test_timeentry.py
tests/cassettes/test_timedelete/: test_delete_timecard.yaml
tests/cassettes/test_timeentry/: test_add_timecard.yaml  test_list_timecard.yaml
tests/fixtures/: cfg_user_password.json
timecard/: __init__.py  cli.py  utils.py
